--- a/ForExperiments/App.config
+++ b/ForExperiments/App.config
@@ -4,7 +4,7 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
 	</startup>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS01;Database=master;Trusted_Connection=True;"
+		<add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS01;Database=MyExperiment;Trusted_Connection=True;"
 			providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
